@@ -15,12 +15,12 @@ public class ConfigurationProperty {
     private final String namespace;
     private final String name;
     private final Class type;
-    private List<String> aliases = new ArrayList<String>();
+    private List<String> aliases = new ArrayList<>();
 
     private Object value;
     private String description;
     private Object defaultValue;
-    private boolean wasOverridden = false;
+    private boolean wasOverridden;
 
     public ConfigurationProperty(String namespace, String propertyName, Class type) {
         this.namespace = namespace;
@@ -96,7 +96,7 @@ public class ConfigurationProperty {
             } else if (type.equals(BigDecimal.class)) {
                 return new BigDecimal((String) value);
             } else if (type.equals(Long.class)) {
-            	return new Long((String) value);
+                return Long.valueOf((String) value);
             } else {
                 throw new UnexpectedLiquibaseException("Cannot parse property "+type.getSimpleName()+" to a "+type.getSimpleName());
             }
@@ -127,7 +127,7 @@ public class ConfigurationProperty {
      * Overwrites the value currently stored in this property. It he passed type is not compatible with the defined type, an exception is thrown.
      */
     public void setValue(Object value) {
-        if (value != null && !type.isAssignableFrom(value.getClass())) {
+        if ((value != null) && !type.isAssignableFrom(value.getClass())) {
             throw new UnexpectedLiquibaseException("Property "+name+" on is of type "+type.getSimpleName()+", not "+value.getClass().getSimpleName());
         }
 
@@ -169,8 +169,8 @@ public class ConfigurationProperty {
      * Sets the default value to use if no ConfigurationProviders override it. Throws an exception if the given object is not compatible with the defined type.
      */
     public ConfigurationProperty setDefaultValue(Object defaultValue) {
-        if (defaultValue != null && !type.isAssignableFrom(defaultValue.getClass())) {
-            if (type == Long.class && defaultValue instanceof Integer) {
+        if ((defaultValue != null) && !type.isAssignableFrom(defaultValue.getClass())) {
+            if ((type == Long.class) && (defaultValue instanceof Integer)) {
                 return setDefaultValue(((Integer) defaultValue).longValue());
             }
             throw new UnexpectedLiquibaseException("Property "+name+" on is of type "+type.getSimpleName()+", not "+defaultValue.getClass().getSimpleName());
