@@ -13,7 +13,7 @@ import java.util.*;
 public class DiffGeneratorFactory {
 
     private static DiffGeneratorFactory instance;
-    private List<DiffGenerator> implementedGenerators = new ArrayList<DiffGenerator>();
+    private List<DiffGenerator> implementedGenerators = new ArrayList<>();
 
     protected DiffGeneratorFactory() {
         try {
@@ -29,7 +29,7 @@ public class DiffGeneratorFactory {
         }
     }
 
-    public static DiffGeneratorFactory getInstance() {
+    public static synchronized DiffGeneratorFactory getInstance() {
         if (instance == null) {
             instance = new DiffGeneratorFactory();
         }
@@ -42,10 +42,10 @@ public class DiffGeneratorFactory {
 
 
     public DiffGenerator getGenerator(Database referenceDatabase, Database comparisonDatabase) {
-        SortedSet<DiffGenerator> foundGenerators = new TreeSet<DiffGenerator>(new Comparator<DiffGenerator>() {
+        SortedSet<DiffGenerator> foundGenerators = new TreeSet<>(new Comparator<DiffGenerator>() {
             @Override
             public int compare(DiffGenerator o1, DiffGenerator o2) {
-                return -1 * new Integer(o1.getPriority()).compareTo(o2.getPriority());
+                return -1 * Integer.valueOf(o1.getPriority()).compareTo(o2.getPriority());
             }
         });
 
@@ -55,7 +55,7 @@ public class DiffGeneratorFactory {
             }
         }
 
-        if (foundGenerators.size() == 0) {
+        if (foundGenerators.isEmpty()) {
             throw new UnexpectedLiquibaseException("Cannot find DiffGenerator for "+referenceDatabase.getShortName()+", "+comparisonDatabase.getShortName());
         }
 
